mqttdir = $(prefix)/
mqtt_DATA = mqtt.js \
            package.json  

# lib
sourcedir = $(prefix)/lib
source_connectdir = $(sourcedir)/connect
source_SCRIPTS = ./lib/*.js
source_connect_SCRIPTS = ./lib/connect/*.js 

# node_modules
#nodemodulesdir = $(prefix)/node_modules
#nodemodules_DATA = ./node_modules/*

# bin
bin_dir = $(prefix)/bin
bin_SCRIPTS = ./bin/*.js

# types
typesdir = $(prefix)/types
types_libdir = $(typesdir)/lib
types_lib_connectdir = $(types_libdir)/connect
dist_types_DATA = ./types/*.ts
dist_types_lib_DATA = ./types/lib/*.ts
dist_types_lib_connect_DATA = ./types/lib/connect/*.ts
